--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="text_color">Color</string>
     <string name="text_store_internally">Store internally</string>
     <string name="hint_write_info_to_store_internally">Write info to store internally..</string>
+    <string name="text_store_externally">Store externally</string>
 </resources>
